Adjust the spacing of the nav and footer. Fix the minor logic error.

--- a/css/screen.css
+++ b/css/screen.css
@@ -586,7 +586,7 @@ footer a:hover {
     margin-top: 25px;
   }
 
-  nav li:hover {
+  nav ul li:hover {
     background: none;
   }
 
@@ -600,5 +600,29 @@ footer a:hover {
 
   nav ul li a:hover {
     background-color: rgba(255, 255, 255, 0.2);
+  }
+
+  nav ul ul {
+    background: none;
+  }
+  nav ul ul li a {
+    margin-left: 30px;
+  }
+  nav ul ul ul li a {
+    margin-left: 60px;
+  }
+
+  nav a[aria-haspopup="true"]::after {
+    display: none;
+  }
+
+  /* Footer */
+  footer div.content {
+    display: block;
+    margin-top: 15px;
+  }
+
+  footer div.content a {
+    margin: 0px 20px 0px 0px;
   }
 }
